--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 * {
 	box-sizing: border-box;
+
 }
 
 body {
@@ -10,32 +11,78 @@ body {
 
 .main_title {
 	font-size: 175%	;
-	position: top right;
+	text-align: center;
 	
 }
 	
 .section_title {
 	font-size:125%;
+	text-align: center;
+	width: 30%;
+	border-bottom: 1px solid black;
+	border-left: 1px solid black;
+	position:relative;
+	left: 70%;
+	
+	
+}
+
+.section_body {
+	padding: 2%;
 }
 	
-
+.section_style {
+	border: 1px solid black;
+	background-color: #AAAAAA;
+}
 
 
 /*desktop*/
 
-}
+
 @media (min-width: 992px) {
-	
-	
-	
+
+.section_style {
+	float: left;
+	width: 32%;
+	margin-left:1%;
+}
+
+.main_title {
+	margin-bottom:3%
 	
 }
 
+}
 
 /*tablet*/
 
 @media (min-width: 768px) and (max-width: 991px) {
 	
+.section_style {
+	float: left;
+	width: 48.5%;
+	margin-left:1%;
+	margin-bottom:1%;
+}
+
+.section_style_solo {
+		width:98%;
+		margin-left:1%
+}
+
+.section_title_solo {
+	width: 15%;
+	left: 85%;
+	
+	
+	
+}
+.main_title {
+	margin-bottom:2%
+	
+}
+
 	
 	
 	
@@ -48,7 +95,14 @@ body {
 @media (max-width: 767px) {
 	
 	
+.main_title {
+	margin-bottom:1%
 	
+}
+
+.section_style {
+	margin-bottom:1%;
+}
 	
 	
 	
